--- a/styles.css
+++ b/styles.css
@@ -392,6 +392,13 @@ textarea {
     width: 50%;
 }
 
+.logo-section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+
 .logo-container {
     width: 200px;
     height: 100px;
@@ -405,13 +412,17 @@ textarea {
     object-fit: contain;
 }
 
-.company-info {
+.company-address {
+    margin-top: 10px;
     text-align: left;
+    width: 100%;
 }
 
-.company-info h1 {
-    margin: 0 0 10px 0;
-    font-size: 1.5em;
+.company-address p {
+    margin: 0;
+    line-height: 1.5;
+    font-size: 16px;
+    text-align: left;
 }
 
 .checklist-group {
